# llm-swarm-environmental-perception

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
_collections/configs/: bg2500-10-big_comm.yaml  bg2500-10-big_noncomm.yaml  bg2500-20-big_comm.yaml  bg2500-20-big_noncomm.yaml  bg2500-big_comm.yaml  bg2500-big_noncomm.yaml  bg2500-scaled-big_comm.yaml  bg2500-scaled-big_noncomm.yaml  bg2500-small_comm.yaml  bg2500-small_noncomm.yaml  config-template.yaml
_collections/metrics/: evaluate_comm_vs_noncomm_bertscore_roberta.py  evaluate_comm_vs_noncomm_cosine_similarity.py  evaluate_comm_vs_noncomm_soft_similarity_sum.py  evaluate_cosine.py  evaluate_nli_baseline.py  evaluate_nli_optimized.py  evaluate_roberta.py  evaluate_roberta2.py  plot_bg2500_big_metrics_pdf.py
_collections/metrics/temporary_scripts/: ground.json  plot_observation_lengths.py  process_experiments_from_bouba.py  roberta_test.py  roberta_two.py  sanity_check.py
_collections/scripts/: combine_metric_plots.py  tracker.py
docs/: architecture.md  configuration.md  experiments.md  index.md  llm-providers.md  methodology.md
docs/reference/: experiments.md  src.md
examples/: example1.yaml  example1_gemini.yaml  example1_openai.yaml  example1_vllm.yaml
experiments/: run_experiments.py
experiments/configs/: bg2500-big_comm.yaml  bg2500-big_noncomm.yaml  bg2500-small_comm.yaml  bg2500-small_noncomm.yaml
experiments/configs/headless/: bg2500-big_comm.yaml  bg2500-big_noncomm.yaml  bg2500-small_comm.yaml  bg2500-small_noncomm.yaml
experiments/configs/headless-multiple-llm/: bg2500-big_comm.yaml  bg2500-big_comm_gem.yaml  bg2500-big_noncomm.yaml
experiments/configs/local-hpc/: local-hpc_comm.yaml
experiments/configs/local-hpc-2500/: local-hpc-2500_comm.yaml  local-hpc-2500_noncomm.yaml
experiments/metrics/: ground_truth_148.json  plot_cosine_experiment_averages.py
experiments/metrics/outputs/: per_robot_per_snapshot_cosine_metrics.csv  per_run_final_summary_cosine_metrics.csv
experiments/runs/batch_20260423_062542/: batch_summary.csv  batch_summary.json
experiments/runs/batch_20260423_062542/bg2500-big/comm/seed_001/: config_resolved.yaml  (+1 more)
legacy/: README.md  build_ground_truth.py  ground_truth_21.json  plot_cosine_experiment_averages.py
pre_assets/ground_truth/: build_ground_truth.py  ground_truth_facts_102.json  ground_truth_facts_148.json  ground_truth_facts_197.json
pre_assets/scripts/: generate_background.py
src/: actuator.py  camera_sensor.py  main.py  observation_logger.py
src/llm/: async_manager.py  factory.py  llm_api_gemini.py  llm_api_local.py  manager.py
src/llm/providers/: gemini.py  ollama.py  vllm.py
src/swarm_perception/: __init__.py  __main__.py  actuator.py  camera_sensor.py  cli.py  logging_setup.py  main.py  observation_logger.py
src/swarm_perception/config/: __init__.py  loader.py  schema.py
src/swarm_perception/eval/: __init__.py  cli.py  geometry.py
src/swarm_perception/fusion/: __init__.py  memory.py  merge.py
src/swarm_perception/io/: __init__.py  run_logger.py  run_meta.py
src/swarm_perception/llm/: async_manager.py  factory.py  manager.py
src/swarm_perception/llm/providers/: base.py  openai_provider.py
src/swarm_perception/perception/: __init__.py  crops.py  encoder.py  runtime.py
src/swarm_perception/sim/: __init__.py  channel.py  engine.py  exchange.py  policies.py  residue.py  robot.py
src/swarm_perception/utils/: config.py  logging_config.py  paths.py  sim_log.py
src/swarm_perception/world/: __init__.py  background.py  generate.py  layout.py  rle.py
src/utils/: config.py  logging_config.py  paths.py  sim_log.py
tests/: conftest.py  test_channel.py  test_cli.py  test_config.py  test_crop.py  test_determinism.py  test_encoder_golden.py  test_eval_geometry.py  test_fusion_memory.py  test_generate.py  test_layout.py  test_logging_setup.py  test_perception_crops.py  test_perception_runtime.py  test_policies.py  test_residue.py  test_rle.py  test_run_logger.py  test_sim_integration.py  test_smoke.py
tests/data/: smoke.yaml
tests/data/crops/: golden_embeddings.npy  make_fixtures.py
(+68 files in other folders)
