[project]
name = "swarm-perception"
version = "0.1.0"
description = "Research-grade swarm environmental-perception benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2",
    "opencv-python>=4.12",
    "pillow>=11.3",
    "pygame>=2.6",
    "violet>=0.0.2",
    "violet-simulator>=0.2.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Evaluation / metrics stack.
eval = [
    "torch>=2.8",
    "transformers>=4.57",
    "sentence-transformers>=5.1",
    "bert-score>=0.3.13",
    "scikit-learn>=1.7",
    "nltk>=3.9",
    "pandas>=3.0",
    "matplotlib>=3.10",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
swarm-run = "swarm_perception.cli:main"
swarm-gen = "swarm_perception.world.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_perception"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true

# PyYAML ships no stubs; the rest of the simulation stack is listed so a
# stub-less wheel on another platform cannot break the type gate.
[[tool.mypy.overrides]]
module = ["vi", "vi.*", "pygame", "pygame.*", "cv2", "cv2.*", "yaml", "yaml.*"]
ignore_missing_imports = true
